# proxy2vpn

./: .editorconfig  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY_ANALYSIS.md  SECURITY_FIXES.md  config.json  install.py  install.sh  proxy2vpn.sh  pyproject.toml  uninstall.sh  vpn_batch_example.json
.github/: pull_request_template.md
news/: 000.bugfix.md  000.feature.md  0001.feature.md  0002.bugfix.md  001.feature.md  002.bugfix.md  002.feature.md  003.feature.md  003.misc.md  003.removal.md  004.feature.md  004.misc.md  005.doc.md  005.misc.md  006.feature.md  007.feature.md  008.bugfix.md  008.feature.md  009.removal.md  010.feature.md  011.misc.md  012.bugfix.md  013.bugfix.md  1-6.bugfix.md  10.misc.md  100.feature.md  1000.bugfix.md  1001.bugfix.md  1002.bugfix.md  1003.bugfix.md  1004.misc.md  101.misc.md  102.feature.md  103.feature.md  104.removal.md  105.feature.md  106.feature.md  107.feature.md  108.feature.md  121.feature.md  (+110 more)
presets/: presets.json
profiles/: README.md
scripts/: bump_version.py  extract_release_notes.py  server_display.sh  server_utils.sh
tests/: README.md  config.json  conftest.py  integration_batch_operations.sh  integration_container_lifecycle.sh  integration_environment_variables.sh  integration_error_recovery.sh  integration_preset_management.sh  integration_profile_management.sh  integration_security.sh  integration_server_list.sh  run_integration_tests.sh  setup_test_env.sh  test_agent_cli.py  test_agent_config.py  test_agent_llm.py  test_agent_runtime.py  (+36 more)
(+64 files in other folders)
