[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proxy2vpn"
version = "0.1.0"
description = "Proxy2VPN Python utilities"
authors = [{ name = "Serhii Khalymon", email = "serhii.khalymon@pm.me" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["vpn", "proxy", "utilities"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer",
    "ruamel.yaml",
    "docker",
    "requests",
]

[project.optional-dependencies]
dev = ["towncrier"]

[tool.towncrier]
package = "proxy2vpn"
filename = "CHANGELOG.md"
directory = "news"

[project.scripts]
proxy2vpn = "proxy2vpn.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
